# airflow-onpremises-sian

./: README.md  docker-compose.override.yml  pyproject.toml
.github/workflows/: deploy.yml
dags/: dag_test_gcp.py  pipeline_hp_dados_escala.py  pipeline_hp_dados_linha.py  pipeline_hp_mix_cars.py  pipeline_hp_mix_dict_events.py  pipeline_hp_mix_events.py  pipeline_hp_mix_events_copy.py  pipeline_hp_mix_geodata.py  pipeline_hp_mix_locations.py  pipeline_hp_mix_positions.py  pipeline_hp_sianet_escala.py  pipeline_hp_sianet_linha.py  pipeline_hp_telemetics_cars.py  pipeline_hp_telemetics_dict_events.py  pipeline_hp_telemetics_events.py  pipeline_hp_telemetics_geodata.py
tmp/: datalake.drawio
