[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Marcelo Borges <github.com.robotics384@passmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
apache-airflow = "^2.9.2"
apache-airflow-providers-google = "^10.19.0"
pandas = "1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
